--- a/about.html
+++ b/about.html
@@ -9,31 +9,43 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body class="about">
+<body>
   <div class="navBar">
     <a href="/index.html">Home</a>
     <a href="/about.html">About Us</a>
     <a href="/portfolios.html">Our Portfolios</a>
     <a href="/contact.html">Contact Us</a>
   </div>
-  <div>
+  
+  <div class="about">
+
+    <!-- task 1: update the company name.-->
     <h1 class="header">
-      About [Company Name]
+      About Etsy
     </h1>
+    
+    <!-- task 2: include a few facts about the company. Try making this an unordered list!-->
     <p>
-      <!-- Update info -->
-      What [company name] does:
+      What Etsy does:
     </p>
-    <img src=" ">
+    <ul>
+      <li>It is located in DUMBo.</li>
+      <li>Arts and crafts company.</li>
+      <li>Tasty food.</li>
+      <li>Inventor of php works (ed) at Etsy.</li>
+      <li>They have a "big mistake" award.</li>
+    </ul>
 
 
     <h1 class="header">
       About Me
     </h1>
+    <!-- task 3: write a short bio about yourself on the about page.-->
     <p>
-      <!-- Update info -->
       Some things to know about me:
     </p>
+
+    <!-- task 4: include an image that represents something about you - this could be a picture of yourself, an interest of yours, or maybe some art you created!.-->
     <img src=" ">
   </div>
 
